tests/semantic/global_decl_collection/snapshots/r#mod__semantic__global_decl_collection__func_collection__duplicate_func.snap
---
source: tests/semantic/global_decl_collection/func_collection.rs
expression: error
---
[
    ErrorRecord {
        key: ErrorKey {
            kind: DuplicateFuncName,
            payload: Str(
                "greet",
            ),
        },
        earliest_phase: GlobalDeclCollection,
        ranges: {
            Range {
                start: 0,
                end: 0,
            },
        },
        severity: Error,
    },
]
