tests/semantic/global_decl_collection/snapshots/r#mod__semantic__global_decl_collection__func_collection__duplicate_param_func.snap
---
source: tests/semantic/global_decl_collection/func_collection.rs
expression: error
---
[
    ErrorRecord {
        key: ErrorKey {
            kind: DuplicateVarName,
            payload: Str(
                "message",
            ),
        },
        earliest_phase: StatementCollection,
        ranges: {
            Range {
                start: 0,
                end: 0,
            },
        },
        severity: Error,
    },
]
