tests/semantic/global_decl_collection/snapshots/r#mod__semantic__global_decl_collection__func_collection__multiple_func_resolution.snap
---
source: tests/semantic/global_decl_collection/func_collection.rs
expression: "&test_ctx.prog_ctx.func_ctx"
---
funcs:
  0:
    name: one
    namespace_id: 0
    func_type: Global
    params: []
    return_type:
      Primitive: Void
    block:
      body: []
      scope_id: 2
    range:
      start: 0
      end: 0
  1:
    name: two
    namespace_id: 0
    func_type: Global
    params: []
    return_type:
      Primitive: Void
    block:
      body: []
      scope_id: 3
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  ? - 0
    - one
  : 0
  ? - 0
    - two
  : 1
next_function_id: 2
