tests/semantic/global_decl_collection/snapshots/r#mod__semantic__global_decl_collection__func_collection__simple_func_resolution.snap
---
source: tests/semantic/global_decl_collection/func_collection.rs
expression: comp_state.func_ctx
---
funcs:
  0:
    name: greet
    is_member: false
    is_static: false
    params: []
    return_type: ~
    block:
      body: []
      scope_id: 1
    range:
      start: 0
      end: 0
member_functions: {}
static_functions: {}
global_functions:
  greet: 0
